# milp_project_bidding_optimization

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/labor_allocation_project/: bidder.py  synthetic_instances.py
