[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoBidder"
version = "0.1.0"
description = "An optimization tool for determining which jobs to bid."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    # "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pulp"
]

[tool.setuptools.packages.find]
where = ["src"]